1. Update flow for function update portrait and cover picture 2. Fix issues cover image overlap content and patient name not showing well

--- a/staticdev/css/patient-profile.scss
+++ b/staticdev/css/patient-profile.scss
@@ -14,6 +14,11 @@
     width: 100%;
     max-width: 100%;
     top: 0;
+    height: 100%;
+  }
+
+  .patient-name {
+    color: #fff;
   }
 
   .btn-cover-picture-edit {
@@ -101,8 +106,41 @@
   text-align: center;
 }
 
-.btn-upload, .btn-take-photo{
+.btn-upload, .btn-take-photo {
   cursor: pointer;
-  line-height:36px;
-  padding:28px 0;
+  line-height: 36px;
+  padding: 28px 0;
+}
+
+.preview-image {
+  margin: auto;
+}
+
+.dropdown.open {
+  .btn-camera {
+    background-color: #000;
+    opacity: 0.7;
+    .glyphicon-camera {
+      font-size: 1em;
+    }
+    .btn-text {
+      display: inline-block;
+    }
+  }
+  .fa.fa-sort-asc {
+    position: absolute;
+    top: -10px;
+    font-size: 2em;
+    color: #FFF;
+    left: 20px;
+  }
+}
+
+.dropdown-menu.cover-photo-menu {
+  top: 35px;
+  left: 20px;
+  a {
+    cursor: pointer;
+    text-decoration: none;
+  }
 }
